<resources>
    <string name="app_name">Desafio Web Services</string>
    <string name="marvel_hq">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Log in</string>
    <string name="create">Create account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="published">"Published: "</string>
    <string name="price">"Price: $"</string>
    <string name="pages">"Pages: "</string>
</resources>